arreglando clase genisisParticula

--- a/app/src/main/res/drawable/estilo_botones.xml
+++ b/app/src/main/res/drawable/estilo_botones.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#808356da"/>
+<solid android:color="#f5a73f"/>
 
     <corners android:radius="10dp"/>
 </shape>
