--- a/app/src/main/res/drawable/color_fondo.xml
+++ b/app/src/main/res/drawable/color_fondo.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#803FFFFF"
-        android:endColor="#70205d76"
-        android:angle="90"/>
+    <solid android:color="#205d76"
+       />
 
 </shape>
