--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="Generadorcito"
-            android:textSize="20sp"
+            android:textColor="#FFC107"
+            android:textSize="24sp"
             android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="200dp"
                 android:text="Nombre del grupo"
+                android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +67,7 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:textAlignment="center"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -84,6 +87,7 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:textAlignment="center"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +101,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="200dp"
                 android:text="Cantidad de partículas"
+                android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -140,6 +145,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
                 android:text="X"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/posX_editText"
@@ -170,6 +176,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
                 android:text="Y"
+                android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/posY_editText"
@@ -182,6 +189,7 @@
                 android:layout_height="23dp"
                 android:layout_marginStart="16dp"
                 android:text="Posición Inicial"
+                android:textColor="#FFFFFF"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -243,6 +251,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="Tipo"
+                android:textColor="#FFFFFF"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
