commit por si las moscas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
                 android:background="@drawable/estilo_edit_text"
                 android:ems="10"
                 android:hint="numero"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:minHeight="48dp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
@@ -127,9 +127,10 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/estilo_edit_text"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:minHeight="48dp"
                 android:textAlignment="center"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toStartOf="@+id/posY_editText"
                 app:layout_constraintStart_toStartOf="parent"
@@ -157,9 +158,10 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/estilo_edit_text"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:minHeight="48dp"
                 android:textAlignment="center"
+                android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/posX_editText"
